--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -92,7 +92,7 @@
                     <img class="d-flex_mr-3" src="img/Servicio_corte_de_pelo/Perro_grande.jpg"
                         alt="Generic placeholder image">
                     <div class="media-body">
-                        <h4> class="mt-1_0">Los animales tambien merecen un hogar
+                        <h4>Los animales tambien merecen un hogar
                             
                         </h4>
                         <h6 class="text2">
