--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -103,8 +103,8 @@
                             
                         </h6>
                         <h5 class="text3">Adopta y apoyanos!!!</h5>
-                        <a class="btn btn-primary" href="Index.html" role="button">Volver a inicio</a>
-                        <a class="btn btn-primary" href="Adoptar.html" role="button">Adopta</a>
+                        <a class="btn btn-primary" href="index.html" role="button">Volver a inicio</a>
+                        <a class="btn btn-primary" href="adoptar.html" role="button">Adopta</a>
 
                     </div>
                 </div>
